--- a/SpringBoot-Todo-App/src/main/resources/templates/index.html
+++ b/SpringBoot-Todo-App/src/main/resources/templates/index.html
@@ -17,8 +17,6 @@
   <table class="table table-bordered">
    <thead>
     <tr>
-    
-     <th> Id </th>
      
      <th> Title </th>
      
@@ -33,18 +31,27 @@
     </tr>
    </thead>
    <tbody>
-    <tr th:each="employee : ${listEmployees}">
-     <td th:text="${employee.id}"></td>
-     <td th:text="${employee.firstName}"></td>
-     <td th:text="${employee.lastName}"></td>
-     <td th:text="${employee.email}"></td>
-     <td> <a th:href="@{/showFormForUpdate/{id}(id=${employee.id})}" class="btn btn-primary">Update</a>
-         <a th:href="@{/deleteEmployee/{id}(id=${employee.id})}" class="btn btn-danger">Delete</a>
+
+    <tr th:if="${listTodos.empty}">
+            <td colspan="5" style="text-align:center;"> No Todos Available</td>
+        </tr>
+        
+     <tr th:each="todo : ${listTodos}">
+     <td th:text="${todo.title}"></td>
+     <td th:text="${todo.description}"></td>
+     <td th:text="${todo.targetDate}"></td>
+   	 <div th:if="${todo.status}"><td>Complete</td></div>
+     <div th:unless="${todo.status}"><td>In Progress</td></div>
+
+     
+     <td> <a th:href="@{/showFormForUpdate/{id}(id=${todo.id})}" class="btn btn-primary">Update</a>
+         <a th:href="@{/deleteTodo/{id}(id=${todo.id})}" class="btn btn-danger">Delete</a>
      </td>
     </tr>
+    
    </tbody>
   </table>
-   <div align="right"><a th:href = "@{/showNewEmployeeForm}" class="btn btn-primary"> Add Todo </a></div>
+   <div align="right"><a th:href = "@{/showNewTodoForm}" class="btn btn-primary"> Add Todo </a></div>
    
 
  </div>
