--- a/SpringBoot-Todo-App/bin/src/main/resources/templates/resources/footer.html
+++ b/SpringBoot-Todo-App/bin/src/main/resources/templates/resources/footer.html
@@ -4,7 +4,7 @@
     bottom: 0;
     width:100%;
     height: 30px;
-    background-color: rgb(175, 223, 224);
+    background-color: #e9e9e9;
 }
 
 </style>
